public/css/tmsm-woocommerce-vouchers-public.css
table.variations .radio input[type="radio"]{
  margin-left: 0;
}

table.vouchers-fields th, table.vouchers-fields td{
  display: list-item;
  padding: 0;
  list-style: none;
  background-color: transparent;
  text-align: left;
}
table.vouchers-fields .label{
  color:inherit;
  font-size:inherit;
}
table.vouchers-fields .value{
  margin-bottom: 1em;
}

.vouchers-fields-wrapper-variation{
  display: none;
  margin-bottom: 20px;
}

.vouchers-fields-wrapper-variation .title-field > label:first-child,
.vouchers-fields-wrapper .title-field > label:first-child{
  margin-right: 20px;
}

@media (max-width: 500px){
  .vouchers-fields-wrapper-variation .title-field > label:first-child{
    display: block;
  }
}

.woocommerce form .vouchers-fields .title-field input, .woocommerce form .vouchers-fields .title-field label {
  display: inline-block;
}

@media (max-width: 500px){
  .vouchers-fields .title-field .input-radio  {
    float: left;
    margin-right: 10px;
    margin-top: 10px;
  }
  .vouchers-fields .title-field label.radio{
    display: block;
  }
}

.vouchers-fields .title-field label.radio  {
  margin-left: 5px;
  font-weight: normal;
  margin-right: 20px;
}
.vouchers-fields .title-field .required{
  border: none;
  text-decoration: none;
}


/* PDF */

.tmsmvoucher-pdf{
  font-size: 11px;
  font-family: Arial, Helvetica, sans-serif;
  color: #333;
}
.tmsmvoucher-pdf a{
  color: #000
}


.tmsmvoucher-pdf-part{
  padding: 30px;
  vertical-align: top;
  clear: both;
}
.tmsmvoucher-pdf-part-1{
  padding-bottom: 0;
}

.tmsmvoucher-pdf-part-3 h1,
.tmsmvoucher-pdf-part-3 h2,
.tmsmvoucher-pdf-part-3 h3
{
  margin-bottom: 0px;
  margin-top: 0;
}

.tmsmvoucher-pdf-product-control{
  float: left;
  width: 30%;
  font-size: 13px;
  vertical-align: top;
}
.tmsmvoucher-pdf-product-data{
  float: left;
  width: 70%;
  margin-left: 4%;
  vertical-align: top;
}


.tmsmvoucher-pdf-part-dotted{
  border-bottom: 1px dotted #b19263;
  height: 314px;
}

.tmsmvoucher-pdf-barcode{
  padding: 0;
  margin: 0;
  margin-left: -10px;
}

.tmsmvoucher-pdf-barcode-container{
  text-align: left;
  vertical-align: top;
  padding-left: 0;
  padding-right: 0;
}

.tmsmvoucher-pdf-product-image{
  width: 100%;
  height: auto;
  margin-bottom: 10px;
}

.tmsmvoucher-pdf-localbusiness-logo{
  display: block;
  text-align: center;
  /*width: 50%;*/
  height: auto;
  max-width: 250px;
  margin-top: 80px;
  /*margin-bottom: 20px;*/

}
.tmsmvoucher-pdf-localbusiness-intro{
  color: #b19263;
  letter-spacing: 0.1em;
}

.tmsmvoucher-pdf-voucher-code{
  margin-bottom: 15px;
}
.tmsmvoucher-pdf-voucher-expirydate{
  margin-bottom: 15px;
}

.tmsmvoucher-pdf-product-name{
  font-size: 18px;
  text-transform: uppercase;
  padding: 2px 5px;
  margin-bottom: 20px;
  background: #b19263;
  color: white;
  font-weight: bold;
}
.tmsmvoucher-pdf-product-intro{
  margin-bottom: 20px;
}
.tmsmvoucher-pdf-product-description{
  margin-bottom: 20px;
  font-size: 10px;
}

.tmsmvoucher-pdf-recipient{
  color: #b19263;
}

.tmsmvoucher-pdf-voucher-graphic{
  float: left;
  width: 34%;
  background: #ede3d5;
  height: 374px;
  margin-top: -30px;
  text-align: center;
}
.tmsmvoucher-pdf-voucher-graphic-image{
  width: 90%;
  display: block;
  margin: 0 auto;
  text-align: center;
  margin-top: 50px;
}

.tmsmvoucher-pdf-localbusiness-header{
  float: left;
  width: 66%;
  text-align: center;
}

.tmsmvoucher-pdf-recipient-name{
  color: #b19263;
}



.tmsmvoucher-pdf-recipient-message{
  font-size: 14px;
}

.tmsmvoucher-pdf-localbusiness-booking-title{
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  margin-top: -20px;
  font-weight: bold;
}
.tmsmvoucher-pdf-localbusiness-booking-data{
  margin-top: -10px;
}

.tmsmvoucher-pdf-localbusiness-booking{
  text-align: center;
  font-size: 10px;
}

.tmsmvoucher-pdf-localbusiness-booking, .tmsmvoucher-pdf-localbusiness-info {
  color: #555;
}
.tmsmvoucher-pdf-localbusiness-info{
  border: 1px solid #b19263;
  padding: 0 20px;
}

.tmsmvoucher-pdf-localbusiness-info1, .tmsmvoucher-pdf-localbusiness-info2{
  float: left;
  width: 48%;
  vertical-align: top;
  font-size: 9px;
}
.tmsmvoucher-pdf-localbusiness-info2{
  margin-left: 4%;
}

